Use 1px instead of 0 to avoid extra space in left col (#8313)

--- a/WebContent/VAADIN/themes/base/formlayout/formlayout.css
+++ b/WebContent/VAADIN/themes/base/formlayout/formlayout.css
@@ -14,9 +14,7 @@
 .v-formlayout-captioncell {
 	text-align:right;
 	white-space: nowrap;
-}
-.v-formlayout.v-has-width > table > tbody > tr > td.v-formlayout-contentcell {
-	width: 100%;
+	width: 1px; /* Don't use any extra space */
 }
 .v-formlayout-captioncell .v-caption {
 	overflow: visible;
